# repa-mandel

./: .gitignore  Mandelbrot.cabal
src/: Main.hs
